apps/temporal/httproute-temporal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal
  namespace: temporal
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: platform-gateway
      namespace: envoy-gateway-system
  hostnames:
    - temporal.demo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          port: 4180
          weight: 1
